# patchwright

./: .editorconfig  .gitattributes  .gitignore  .mailmap  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  NOTICE  PRIVACY.md  Package.resolved  Package.swift  README.md  SECURITY.md  SUPPORT.md
.codex/environments/: environment.toml
.engineering-agent/: project.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
Assets/: README.md
Packaging/: Info.plist  Patchwright.icns  THIRD_PARTY_NOTICES.md
Sources/PatchwrightCore/: CodexModels.swift  ContractModels.swift  ConversionModels.swift  DeliveryModels.swift  EngineClient.swift  FoundationReviewProvider.swift  GitHubModels.swift  Models.swift  PreparationModels.swift  RelayHealthChecker.swift  SetupGuidance.swift  WorkspacePresentation.swift  WorkspaceSorting.swift  WorkspaceStore.swift
Tests/PackagingTests/: candidate_evidence_contract.sh  community_release_contract.sh  compliance_contract.sh  generate_ed25519_fixture.swift  github_app_smoke_contract.sh  promotion_contract.sh  release_contract.sh  release_security_contract.sh
Tests/PatchwrightCoreTests/: CodexPresentationTests.swift  ConversionStoreTests.swift  DeliveryStoreTests.swift  ModelsTests.swift  PreparationPresentationTests.swift  RelayHealthCheckerTests.swift  SettingsViewTests.swift  SetupGuidanceTests.swift  UnixEngineClientTests.swift  UpdateConfigurationTests.swift  WorkspaceConcurrencyTests.swift  (+2 more)
crates/patchwright-core/: Cargo.toml
crates/patchwright-core/src/: contract.rs  domain.rs  github_actions.rs  instructions.rs  lib.rs  policy.rs  queue.rs  sorting.rs
crates/patchwright-core/tests/: approval_contract.rs  domain_contract.rs  github_action_contract.rs  queue_contract.rs  sorting_contract.rs  task_contract.rs
crates/patchwright-engine/: Cargo.toml
crates/patchwright-engine/src/: command.rs  conversion.rs  delivery.rs  github.rs  jobs.rs  lease.rs  lib.rs  main.rs  monitoring.rs  planning.rs  preparation.rs  repository.rs  rpc.rs  store.rs  verification.rs  worktree.rs
crates/patchwright-engine/src/codex/: mod.rs  process.rs  protocol.rs  service.rs  session.rs
crates/patchwright-engine/tests/: codex_approvals.rs  codex_cancellation.rs  codex_process.rs  codex_protocol.rs  codex_rpc.rs  codex_session.rs  command_runner.rs  delivery_flow.rs  durable_jobs.rs  github_jobs.rs  github_mutation_credential_boundary.rs  github_source.rs  github_store.rs  monitoring_flow.rs  queue_recovery.rs  real_codex.rs  recovery.rs  rpc_conversion.rs  rpc_socket.rs  task_conversion.rs  verification_flow.rs  webhook_forwarding.rs  worktree_flow.rs
crates/patchwright-engine/tests/fixtures/codex/: client-lifecycle.jsonl  server-lifecycle.jsonl
crates/patchwright-engine/tests/support/: fake_codex_app_server.rs
crates/patchwright-relay/: Cargo.toml
crates/patchwright-relay/src/: app_auth.rs  github.rs  installation.rs  lib.rs  main.rs  mutations.rs  webhook.rs
crates/patchwright-relay/tests/: app_auth.rs  installation_tokens.rs  mutations.rs  webhook_flow.rs
docs/: RELEASING.md  architecture.md  clean-machine-test-plan.md  direct-download.md  github-publication-plan.md  production-plan.md  release-checklist.md  release-readiness.md  security.md
script/: assert_release_assembly.sh  build_and_run.sh  build_release_components.sh  clean_machine_probe.sh  create_dmg.sh  generate_app_icon.sh  generate_candidate_evidence.py  generate_release_compliance.py  generate_release_metadata.sh  generate_symlink_manifest.py  notarize_release.sh  package_community_release.sh  package_release.sh  parse_notary_log.py  promote_release.sh  release.sh  release_readiness.sh  scan_publication_secrets.sh  sign_release.sh  smoke.sh  smoke_codex.sh  smoke_github_app.sh  validate_bundle.sh  verify.sh  verify_checksum_sidecar.py  verify_codex_schema.sh  verify_distribution.sh  verify_ed25519.swift  verify_release_evidence.py  verify_release_source.py  verify_reproducibility_bundle.sh  verify_signing.sh  write_owner_evidence.py
(+52 files in other folders)
