[workspace]
members = [
    "crates/patchwright-core",
    "crates/patchwright-engine",
    "crates/patchwright-relay",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1.0"
axum = "0.8.9"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
hex = "0.4"
hmac = "0.12"
http = "1.3"
jsonwebtoken = "9.3"
nix = { version = "0.30", features = ["fs", "process", "signal", "socket", "user"] }
patchwright-core = { path = "crates/patchwright-core" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
subtle = "2.6"
tempfile = "3.23"
thiserror = "2.0"
tokio = { version = "1.48", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
