[package]
name = "patchwright-engine"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
nix.workspace = true
patchwright-core.workspace = true
patchwright-relay = { path = "../patchwright-relay" }
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
axum.workspace = true
hex.workspace = true
hmac.workspace = true
http.workspace = true
tempfile.workspace = true
tower.workspace = true

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
