[package]
name = "patchwright-relay"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
clap.workspace = true
hex.workspace = true
hmac.workspace = true
http.workspace = true
jsonwebtoken.workspace = true
nix.workspace = true
patchwright-core.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
security-framework = "3.7.0"
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
subtle.workspace = true
tokio.workspace = true
tower.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
